--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "starter-project",
+  "name": "githubflow",
   "dependencies": {
     "ember": "~2.7.0",
     "ember-cli-shims": "~0.1.1",
