--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-composable-helpers": "1.0.0",
+    "ember-concurrency": "0.7.8",
     "ember-data": "^2.7.0",
     "ember-export-application-global": "^1.0.5",
     "ember-font-awesome": "2.1.1",
     "ember-load-initializers": "^0.5.1",
     "ember-moment": "7.0.0-beta.3",
+    "ember-network": "0.3.0",
     "ember-resolver": "^2.0.3",
     "ember-simple-auth": "1.1.0",
     "ember-simple-auth-token": "1.1.1",
