--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "ember build",
     "start": "ember server",
     "test": "ember test",
-    "lintfix": "eslint app --fix && eslint tests --fix"
+    "lintfix": "eslint app --fix && eslint tests --fix",
+    "deploy": "ember build -e production && cp dist/index.html dist/200.html && surge dist githubflow.surge.sh"
   },
   "repository": "",
   "engines": {
@@ -49,6 +50,7 @@
     "ember-load-initializers": "^0.5.1",
     "ember-moment": "7.0.0-beta.3",
     "ember-network": "0.3.0",
+    "ember-remarkable": "3.1.2",
     "ember-resolver": "^2.0.3",
     "ember-simple-auth": "1.1.0",
     "ember-simple-auth-token": "1.1.1",
