--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-eslint": "^6.1.2",
     "broccoli-asset-rev": "^2.4.2",
     "ember-ajax": "^2.0.1",
+    "ember-browserify": "1.1.12",
     "ember-bulma": "0.1.0",
     "ember-cli": "2.7.0",
     "ember-cli-app-version": "^1.0.0",
@@ -61,5 +62,8 @@
     "eslint-plugin-import": "^1.13.0",
     "liquid-fire": "0.24.1",
     "loader.js": "^4.0.1"
+  },
+  "dependencies": {
+    "chance": "^1.0.4"
   }
 }
